sys/fs/nfsclient/nfs_clnode.c
@@ -286,6 +286,9 @@ ncl_reclaim(struct vop_reclaim_args *ap)
 	struct vnode *vp = ap->a_vp;
 	struct nfsnode *np = VTONFS(vp);
 	struct nfsdmap *dp, *dp2;
+	struct mount *mp;
+
+	mp = vp->v_mount;
 
 	/*
 	 * If the NLM is running, give it a chance to abort pending
@@ -317,7 +320,12 @@ ncl_reclaim(struct vop_reclaim_args *ap)
 		 * vfs_hash_remove(), since it cannot be recalled once the
 		 * nfs node is no longer available.
 		 */
-		nfscl_delegreturnvp(vp, td);
+		MNT_ILOCK(mp);
+		if ((mp->mnt_kern_flag & MNTK_UNMOUNTF) == 0) {
+			MNT_IUNLOCK(mp);
+			nfscl_delegreturnvp(vp, td);
+		} else
+			MNT_IUNLOCK(mp);
 	}
 
 	vfs_hash_remove(vp);
